--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,5 +57,6 @@ else()
 endif()
 
 add_subdirectory(tests)
+add_subdirectory(gui-user)
 
 # ============================================================================
