--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,13 +54,13 @@ if(INCLUDE_PILE_SOURCES_DIRECTLY)
     include(pile_support)
     pileInclude (UserMsg)
     usermsgInit(PILE)
-    pileInclude (UserMsgGui)
+    pileInclude (UserMsgGui "usermsg-gui")
     usermsgguiInit(PILE)
 else()
     set (USERMSG_BUILD_MODE SHARED)
     add_subdirectory(usermsg)
     set (USERMSGGUI_BUILD_MODE SHARED)
-    add_subdirectory(usermsggui)
+    add_subdirectory(usermsg-gui)
 endif()
 
 add_subdirectory(tests)
